fix: cant scroll to the sticky bar at the bottom on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3721,10 +3721,7 @@ main {
   }
 
   &.sticky-bar-docked-bottom {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    position: relative;
     z-index: 30;
     margin: 0;
     border-radius: 0;
